<resources>
    <string name="app_name">PlayMeNext</string>
    <string name="add_piece">Add Piece</string>

    <string name="hint_title">Title...</string>
    <string name="button_save">Save</string>
    <string name="not_saved">Empty title was not saved.</string>
    <string name="hint_subtitle">Subtitle...</string>
    <string name="hint_composer">Composer...</string>
    <string name="hint_arranger">Arranger...</string>
    <string name="hint_priority">Priority...</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_subtitle">Subtitle</string>
    <string name="lbl_composer">Composer</string>
    <string name="lbl_arranger">Arranger</string>
    <string name="lbl_priority">Priority</string>
    <string name="retrieve_pieces_error">Error: Unable to retrieve pieces from database!</string>
    <string name="confirm_played_dialog_title">Confirm</string>
    <string name="confirm_played_dialog_message">Did you play %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="last_played_text">last played: %1$s</string>
    <string name="rc_never">never</string>
    <string name="rc_just_now">just now</string>
    <!-- could be "vor %1$d" in German for instance -->
    <string name="rc_time_ago">%1$s ago</string>
</resources>